// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots interact|Button default 1`] = `
.c0 {
  padding: 12px;
}

.c1 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: 500;
  font-size: 0.875em;
  color: #fff;
  line-height: 1.5;
  text-transform: uppercase;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  min-width: 2.5em;
  height: 2.857142857142857em;
  padding: 0 1.5em;
  border: none;
  border-radius: 4px;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
  background-color: #00a8d8;
  --focus-color: 0,168,216;
}

.c1:hover {
  box-shadow: inset 10px 10px 999em rgba(0,0,0,0.1);
}

.c1:focus {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.1), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c1:active,
.c1.active {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.2), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c1:after {
  display: none;
  content: "";
  position: absolute;
  top: -1px;
  right: -1px;
  bottom: -1px;
  left: -1px;
  border-radius: inherit;
  background-color: rgba(255,255,255,0.5);
}

.c1[disabled] {
  pointer-events: none;
}

.c1[disabled]:after {
  display: block;
}

.c1 .c2 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

<div
  className="c0"
>
  <button
    className="c1"
  >
    Default
  </button>
</div>
`;

exports[`Storyshots interact|Button disabled 1`] = `
.c0 {
  padding: 12px;
}

.c1 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: 500;
  font-size: 0.875em;
  color: #fff;
  line-height: 1.5;
  text-transform: uppercase;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  min-width: 2.5em;
  height: 2.857142857142857em;
  padding: 0 1.5em;
  border: none;
  border-radius: 4px;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
  background-color: #00a8d8;
  --focus-color: 0,168,216;
}

.c1:hover {
  box-shadow: inset 10px 10px 999em rgba(0,0,0,0.1);
}

.c1:focus {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.1), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c1:active,
.c1.active {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.2), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c1:after {
  display: none;
  content: "";
  position: absolute;
  top: -1px;
  right: -1px;
  bottom: -1px;
  left: -1px;
  border-radius: inherit;
  background-color: rgba(255,255,255,0.5);
}

.c1[disabled] {
  pointer-events: none;
}

.c1[disabled]:after {
  display: block;
}

.c1 .c2 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

<div
  className="c0"
>
  <button
    className="c1"
    disabled={true}
  >
    Disabled
  </button>
</div>
`;

exports[`Storyshots interact|Button icon 1`] = `
.c0 {
  padding: 12px;
}

.c3 {
  height: 1em;
  line-height: 1em;
  text-transform: none;
}

.c1 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: 500;
  font-size: 0.875em;
  color: #fff;
  line-height: 1.5;
  text-transform: uppercase;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  min-width: 2.5em;
  height: 2.857142857142857em;
  padding: 0 1.5em;
  border: none;
  border-radius: 4px;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
  background-color: #00a8d8;
  --focus-color: 0,168,216;
}

.c1:hover {
  box-shadow: inset 10px 10px 999em rgba(0,0,0,0.1);
}

.c1:focus {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.1), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c1:active,
.c1.active {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.2), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c1:after {
  display: none;
  content: "";
  position: absolute;
  top: -1px;
  right: -1px;
  bottom: -1px;
  left: -1px;
  border-radius: inherit;
  background-color: rgba(255,255,255,0.5);
}

.c1[disabled] {
  pointer-events: none;
}

.c1[disabled]:after {
  display: block;
}

.c1 .c2 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c4 .c2 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c5 .c2 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c6 .c2 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c7 .c2 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c8 .c2 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c9 .c2 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c10 .c2 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c11 .c2 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c12 .c2 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c13 .c2 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

<div
  className="c0"
>
  <button
    className="c1"
  >
    <span
      className="c2 c3"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        strokeWidth="0"
        style={
          Object {
            "color": undefined,
          }
        }
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"
        />
      </svg>
    </span>
     Favorite
  </button>
</div>
`;

exports[`Storyshots interact|Button outlined 1`] = `
.c0 {
  padding: 12px;
}

.c2 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: 500;
  font-size: 0.875em;
  color: #fff;
  line-height: 1.5;
  text-transform: uppercase;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  min-width: 2.5em;
  height: 2.857142857142857em;
  padding: 0 1.5em;
  border: none;
  border-radius: 4px;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
  background-color: #00a8d8;
  --focus-color: 0,168,216;
  background-color: #fff;
  color: #00a8d8;
  box-shadow: 0 0 0 1px #00a8d8;
}

.c2:hover {
  box-shadow: inset 10px 10px 999em rgba(0,0,0,0.1);
}

.c2:focus {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.1), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c2:active,
.c2.active {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.2), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c2:after {
  display: none;
  content: "";
  position: absolute;
  top: -1px;
  right: -1px;
  bottom: -1px;
  left: -1px;
  border-radius: inherit;
  background-color: rgba(255,255,255,0.5);
}

.c2[disabled] {
  pointer-events: none;
}

.c2[disabled]:after {
  display: block;
}

.c2:hover {
  color: #222;
  box-shadow: 0 0 0 1px #222;
}

.c2:focus {
  box-shadow: 0 0 0 1px #00a8d8, 0 0 0 5px rgba(var(--focus-color),0.15);
}

.c2 .c6 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c3 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: 500;
  font-size: 0.875em;
  color: #fff;
  line-height: 1.5;
  text-transform: uppercase;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  min-width: 2.5em;
  height: 2.857142857142857em;
  padding: 0 1.5em;
  border: none;
  border-radius: 4px;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
  background-color: #999;
  --focus-color: 153,153,153;
  background-color: #fff;
  color: #999;
  box-shadow: 0 0 0 1px #999;
}

.c3:hover {
  box-shadow: inset 10px 10px 999em rgba(0,0,0,0.1);
}

.c3:focus {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.1), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c3:active,
.c3.active {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.2), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c3:after {
  display: none;
  content: "";
  position: absolute;
  top: -1px;
  right: -1px;
  bottom: -1px;
  left: -1px;
  border-radius: inherit;
  background-color: rgba(255,255,255,0.5);
}

.c3[disabled] {
  pointer-events: none;
}

.c3[disabled]:after {
  display: block;
}

.c3:hover {
  color: #222;
  box-shadow: 0 0 0 1px #222;
}

.c3:focus {
  box-shadow: 0 0 0 1px #999, 0 0 0 5px rgba(var(--focus-color),0.15);
}

.c3 .c6 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c4 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: 500;
  font-size: 0.875em;
  color: #fff;
  line-height: 1.5;
  text-transform: uppercase;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  min-width: 2.5em;
  height: 2.857142857142857em;
  padding: 0 1.5em;
  border: none;
  border-radius: 4px;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
  background-color: #4caf50;
  --focus-color: 76,175,80;
  background-color: #fff;
  color: #4caf50;
  box-shadow: 0 0 0 1px #4caf50;
}

.c4:hover {
  box-shadow: inset 10px 10px 999em rgba(0,0,0,0.1);
}

.c4:focus {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.1), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c4:active,
.c4.active {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.2), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c4:after {
  display: none;
  content: "";
  position: absolute;
  top: -1px;
  right: -1px;
  bottom: -1px;
  left: -1px;
  border-radius: inherit;
  background-color: rgba(255,255,255,0.5);
}

.c4[disabled] {
  pointer-events: none;
}

.c4[disabled]:after {
  display: block;
}

.c4:hover {
  color: #222;
  box-shadow: 0 0 0 1px #222;
}

.c4:focus {
  box-shadow: 0 0 0 1px #4caf50, 0 0 0 5px rgba(var(--focus-color),0.15);
}

.c4 .c6 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c5 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: 500;
  font-size: 0.875em;
  color: #fff;
  line-height: 1.5;
  text-transform: uppercase;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  min-width: 2.5em;
  height: 2.857142857142857em;
  padding: 0 1.5em;
  border: none;
  border-radius: 4px;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
  background-color: #ef5350;
  --focus-color: 239,83,80;
  background-color: #fff;
  color: #ef5350;
  box-shadow: 0 0 0 1px #ef5350;
}

.c5:hover {
  box-shadow: inset 10px 10px 999em rgba(0,0,0,0.1);
}

.c5:focus {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.1), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c5:active,
.c5.active {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.2), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c5:after {
  display: none;
  content: "";
  position: absolute;
  top: -1px;
  right: -1px;
  bottom: -1px;
  left: -1px;
  border-radius: inherit;
  background-color: rgba(255,255,255,0.5);
}

.c5[disabled] {
  pointer-events: none;
}

.c5[disabled]:after {
  display: block;
}

.c5:hover {
  color: #222;
  box-shadow: 0 0 0 1px #222;
}

.c5:focus {
  box-shadow: 0 0 0 1px #ef5350, 0 0 0 5px rgba(var(--focus-color),0.15);
}

.c5 .c6 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c1 {
  display: grid;
  grid-gap: 20px;
  grid-template-columns: repeat(10, fit-content(200px));
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <button
      className="c2"
    >
      Primary
    </button>
    <button
      className="c3"
    >
      Secondary
    </button>
    <button
      className="c4"
    >
      Success
    </button>
    <button
      className="c5"
    >
      Danger
    </button>
  </div>
</div>
`;

exports[`Storyshots interact|Button purposes 1`] = `
.c0 {
  padding: 12px;
}

.c2 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: 500;
  font-size: 0.875em;
  color: #fff;
  line-height: 1.5;
  text-transform: uppercase;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  min-width: 2.5em;
  height: 2.857142857142857em;
  padding: 0 1.5em;
  border: none;
  border-radius: 4px;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
  background-color: #00a8d8;
  --focus-color: 0,168,216;
}

.c2:hover {
  box-shadow: inset 10px 10px 999em rgba(0,0,0,0.1);
}

.c2:focus {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.1), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c2:active,
.c2.active {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.2), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c2:after {
  display: none;
  content: "";
  position: absolute;
  top: -1px;
  right: -1px;
  bottom: -1px;
  left: -1px;
  border-radius: inherit;
  background-color: rgba(255,255,255,0.5);
}

.c2[disabled] {
  pointer-events: none;
}

.c2[disabled]:after {
  display: block;
}

.c2 .c6 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c3 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: 500;
  font-size: 0.875em;
  color: #fff;
  line-height: 1.5;
  text-transform: uppercase;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  min-width: 2.5em;
  height: 2.857142857142857em;
  padding: 0 1.5em;
  border: none;
  border-radius: 4px;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
  background-color: #999;
  --focus-color: 153,153,153;
}

.c3:hover {
  box-shadow: inset 10px 10px 999em rgba(0,0,0,0.1);
}

.c3:focus {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.1), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c3:active,
.c3.active {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.2), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c3:after {
  display: none;
  content: "";
  position: absolute;
  top: -1px;
  right: -1px;
  bottom: -1px;
  left: -1px;
  border-radius: inherit;
  background-color: rgba(255,255,255,0.5);
}

.c3[disabled] {
  pointer-events: none;
}

.c3[disabled]:after {
  display: block;
}

.c3 .c6 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c4 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: 500;
  font-size: 0.875em;
  color: #fff;
  line-height: 1.5;
  text-transform: uppercase;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  min-width: 2.5em;
  height: 2.857142857142857em;
  padding: 0 1.5em;
  border: none;
  border-radius: 4px;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
  background-color: #4caf50;
  --focus-color: 76,175,80;
}

.c4:hover {
  box-shadow: inset 10px 10px 999em rgba(0,0,0,0.1);
}

.c4:focus {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.1), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c4:active,
.c4.active {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.2), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c4:after {
  display: none;
  content: "";
  position: absolute;
  top: -1px;
  right: -1px;
  bottom: -1px;
  left: -1px;
  border-radius: inherit;
  background-color: rgba(255,255,255,0.5);
}

.c4[disabled] {
  pointer-events: none;
}

.c4[disabled]:after {
  display: block;
}

.c4 .c6 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c5 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: 500;
  font-size: 0.875em;
  color: #fff;
  line-height: 1.5;
  text-transform: uppercase;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  min-width: 2.5em;
  height: 2.857142857142857em;
  padding: 0 1.5em;
  border: none;
  border-radius: 4px;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
  background-color: #ef5350;
  --focus-color: 239,83,80;
}

.c5:hover {
  box-shadow: inset 10px 10px 999em rgba(0,0,0,0.1);
}

.c5:focus {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.1), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c5:active,
.c5.active {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.2), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c5:after {
  display: none;
  content: "";
  position: absolute;
  top: -1px;
  right: -1px;
  bottom: -1px;
  left: -1px;
  border-radius: inherit;
  background-color: rgba(255,255,255,0.5);
}

.c5[disabled] {
  pointer-events: none;
}

.c5[disabled]:after {
  display: block;
}

.c5 .c6 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c1 {
  display: grid;
  grid-gap: 20px;
  grid-template-columns: repeat(10, fit-content(200px));
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <button
      className="c2"
    >
      Primary
    </button>
    <button
      className="c3"
    >
      Secondary
    </button>
    <button
      className="c4"
    >
      Success
    </button>
    <button
      className="c5"
    >
      Danger
    </button>
  </div>
</div>
`;

exports[`Storyshots interact|Button round 1`] = `
.c0 {
  padding: 12px;
}

.c17 {
  height: 1em;
  line-height: 1em;
  text-transform: none;
}

.c18 .c16 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c19 .c16 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c20 .c16 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c21 .c16 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c22 .c16 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c23 .c16 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c24 .c16 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c25 .c16 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c26 .c16 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c27 .c16 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c28 .c16 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c2 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: 500;
  font-size: 0.875em;
  color: #fff;
  line-height: 1.5;
  text-transform: uppercase;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  min-width: 2.5em;
  height: 2.857142857142857em;
  padding: 0 1.5em;
  border: none;
  border-radius: 4px;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
  background-color: #00a8d8;
  --focus-color: 0,168,216;
  border-radius: 50%;
  min-width: auto;
  padding: 0;
  width: 2.857142857142857em;
}

.c2:hover {
  box-shadow: inset 10px 10px 999em rgba(0,0,0,0.1);
}

.c2:focus {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.1), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c2:active,
.c2.active {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.2), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c2:after {
  display: none;
  content: "";
  position: absolute;
  top: -1px;
  right: -1px;
  bottom: -1px;
  left: -1px;
  border-radius: inherit;
  background-color: rgba(255,255,255,0.5);
}

.c2[disabled] {
  pointer-events: none;
}

.c2[disabled]:after {
  display: block;
}

.c2 .c16 {
  font-size: 1.5em;
}

.c3 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: 500;
  font-size: 0.875em;
  color: #fff;
  line-height: 1.5;
  text-transform: uppercase;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  min-width: 2.5em;
  height: 2.857142857142857em;
  padding: 0 1.5em;
  border: none;
  border-radius: 4px;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
  background-color: #999;
  --focus-color: 153,153,153;
  border-radius: 50%;
  min-width: auto;
  padding: 0;
  width: 2.857142857142857em;
}

.c3:hover {
  box-shadow: inset 10px 10px 999em rgba(0,0,0,0.1);
}

.c3:focus {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.1), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c3:active,
.c3.active {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.2), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c3:after {
  display: none;
  content: "";
  position: absolute;
  top: -1px;
  right: -1px;
  bottom: -1px;
  left: -1px;
  border-radius: inherit;
  background-color: rgba(255,255,255,0.5);
}

.c3[disabled] {
  pointer-events: none;
}

.c3[disabled]:after {
  display: block;
}

.c3 .c16 {
  font-size: 1.5em;
}

.c4 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: 500;
  font-size: 0.875em;
  color: #fff;
  line-height: 1.5;
  text-transform: uppercase;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  min-width: 2.5em;
  height: 2.857142857142857em;
  padding: 0 1.5em;
  border: none;
  border-radius: 4px;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
  background-color: #4caf50;
  --focus-color: 76,175,80;
  border-radius: 50%;
  min-width: auto;
  padding: 0;
  width: 2.857142857142857em;
}

.c4:hover {
  box-shadow: inset 10px 10px 999em rgba(0,0,0,0.1);
}

.c4:focus {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.1), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c4:active,
.c4.active {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.2), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c4:after {
  display: none;
  content: "";
  position: absolute;
  top: -1px;
  right: -1px;
  bottom: -1px;
  left: -1px;
  border-radius: inherit;
  background-color: rgba(255,255,255,0.5);
}

.c4[disabled] {
  pointer-events: none;
}

.c4[disabled]:after {
  display: block;
}

.c4 .c16 {
  font-size: 1.5em;
}

.c5 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: 500;
  font-size: 0.875em;
  color: #fff;
  line-height: 1.5;
  text-transform: uppercase;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  min-width: 2.5em;
  height: 2.857142857142857em;
  padding: 0 1.5em;
  border: none;
  border-radius: 4px;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
  background-color: #ef5350;
  --focus-color: 239,83,80;
  border-radius: 50%;
  min-width: auto;
  padding: 0;
  width: 2.857142857142857em;
}

.c5:hover {
  box-shadow: inset 10px 10px 999em rgba(0,0,0,0.1);
}

.c5:focus {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.1), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c5:active,
.c5.active {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.2), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c5:after {
  display: none;
  content: "";
  position: absolute;
  top: -1px;
  right: -1px;
  bottom: -1px;
  left: -1px;
  border-radius: inherit;
  background-color: rgba(255,255,255,0.5);
}

.c5[disabled] {
  pointer-events: none;
}

.c5[disabled]:after {
  display: block;
}

.c5 .c16 {
  font-size: 1.5em;
}

.c6 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: 500;
  font-size: 0.875em;
  color: #fff;
  line-height: 1.5;
  text-transform: uppercase;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  min-width: 2.5em;
  height: 2.857142857142857em;
  padding: 0 1.5em;
  border: none;
  border-radius: 4px;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
  background-color: #00a8d8;
  --focus-color: 0,168,216;
  background-color: #fff;
  color: #00a8d8;
  box-shadow: 0 0 0 1px #00a8d8;
  border-radius: 50%;
  min-width: auto;
  padding: 0;
  width: 2.857142857142857em;
}

.c6:hover {
  box-shadow: inset 10px 10px 999em rgba(0,0,0,0.1);
}

.c6:focus {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.1), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c6:active,
.c6.active {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.2), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c6:after {
  display: none;
  content: "";
  position: absolute;
  top: -1px;
  right: -1px;
  bottom: -1px;
  left: -1px;
  border-radius: inherit;
  background-color: rgba(255,255,255,0.5);
}

.c6[disabled] {
  pointer-events: none;
}

.c6[disabled]:after {
  display: block;
}

.c6:hover {
  color: #222;
  box-shadow: 0 0 0 1px #222;
}

.c6:focus {
  box-shadow: 0 0 0 1px #00a8d8, 0 0 0 5px rgba(var(--focus-color),0.15);
}

.c6 .c16 {
  font-size: 1.5em;
}

.c7 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: 500;
  font-size: 0.875em;
  color: #fff;
  line-height: 1.5;
  text-transform: uppercase;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  min-width: 2.5em;
  height: 2.857142857142857em;
  padding: 0 1.5em;
  border: none;
  border-radius: 4px;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
  background-color: #999;
  --focus-color: 153,153,153;
  background-color: #fff;
  color: #999;
  box-shadow: 0 0 0 1px #999;
  border-radius: 50%;
  min-width: auto;
  padding: 0;
  width: 2.857142857142857em;
}

.c7:hover {
  box-shadow: inset 10px 10px 999em rgba(0,0,0,0.1);
}

.c7:focus {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.1), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c7:active,
.c7.active {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.2), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c7:after {
  display: none;
  content: "";
  position: absolute;
  top: -1px;
  right: -1px;
  bottom: -1px;
  left: -1px;
  border-radius: inherit;
  background-color: rgba(255,255,255,0.5);
}

.c7[disabled] {
  pointer-events: none;
}

.c7[disabled]:after {
  display: block;
}

.c7:hover {
  color: #222;
  box-shadow: 0 0 0 1px #222;
}

.c7:focus {
  box-shadow: 0 0 0 1px #999, 0 0 0 5px rgba(var(--focus-color),0.15);
}

.c7 .c16 {
  font-size: 1.5em;
}

.c8 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: 500;
  font-size: 0.875em;
  color: #fff;
  line-height: 1.5;
  text-transform: uppercase;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  min-width: 2.5em;
  height: 2.857142857142857em;
  padding: 0 1.5em;
  border: none;
  border-radius: 4px;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
  background-color: #4caf50;
  --focus-color: 76,175,80;
  background-color: #fff;
  color: #4caf50;
  box-shadow: 0 0 0 1px #4caf50;
  border-radius: 50%;
  min-width: auto;
  padding: 0;
  width: 2.857142857142857em;
}

.c8:hover {
  box-shadow: inset 10px 10px 999em rgba(0,0,0,0.1);
}

.c8:focus {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.1), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c8:active,
.c8.active {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.2), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c8:after {
  display: none;
  content: "";
  position: absolute;
  top: -1px;
  right: -1px;
  bottom: -1px;
  left: -1px;
  border-radius: inherit;
  background-color: rgba(255,255,255,0.5);
}

.c8[disabled] {
  pointer-events: none;
}

.c8[disabled]:after {
  display: block;
}

.c8:hover {
  color: #222;
  box-shadow: 0 0 0 1px #222;
}

.c8:focus {
  box-shadow: 0 0 0 1px #4caf50, 0 0 0 5px rgba(var(--focus-color),0.15);
}

.c8 .c16 {
  font-size: 1.5em;
}

.c9 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: 500;
  font-size: 0.875em;
  color: #fff;
  line-height: 1.5;
  text-transform: uppercase;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  min-width: 2.5em;
  height: 2.857142857142857em;
  padding: 0 1.5em;
  border: none;
  border-radius: 4px;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
  background-color: #ef5350;
  --focus-color: 239,83,80;
  background-color: #fff;
  color: #ef5350;
  box-shadow: 0 0 0 1px #ef5350;
  border-radius: 50%;
  min-width: auto;
  padding: 0;
  width: 2.857142857142857em;
}

.c9:hover {
  box-shadow: inset 10px 10px 999em rgba(0,0,0,0.1);
}

.c9:focus {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.1), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c9:active,
.c9.active {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.2), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c9:after {
  display: none;
  content: "";
  position: absolute;
  top: -1px;
  right: -1px;
  bottom: -1px;
  left: -1px;
  border-radius: inherit;
  background-color: rgba(255,255,255,0.5);
}

.c9[disabled] {
  pointer-events: none;
}

.c9[disabled]:after {
  display: block;
}

.c9:hover {
  color: #222;
  box-shadow: 0 0 0 1px #222;
}

.c9:focus {
  box-shadow: 0 0 0 1px #ef5350, 0 0 0 5px rgba(var(--focus-color),0.15);
}

.c9 .c16 {
  font-size: 1.5em;
}

.c10 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: 500;
  font-size: 0.6015625em;
  color: #fff;
  line-height: 1.5;
  text-transform: uppercase;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  min-width: 2.5em;
  height: 2.5em;
  padding: 0 1.5em;
  border: none;
  border-radius: 4px;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
  background-color: #00a8d8;
  --focus-color: 0,168,216;
  border-radius: 50%;
  min-width: auto;
  padding: 0;
  width: 2.5em;
}

.c10:hover {
  box-shadow: inset 10px 10px 999em rgba(0,0,0,0.1);
}

.c10:focus {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.1), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c10:active,
.c10.active {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.2), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c10:after {
  display: none;
  content: "";
  position: absolute;
  top: -1px;
  right: -1px;
  bottom: -1px;
  left: -1px;
  border-radius: inherit;
  background-color: rgba(255,255,255,0.5);
}

.c10[disabled] {
  pointer-events: none;
}

.c10[disabled]:after {
  display: block;
}

.c10 .c16 {
  font-size: 1.5em;
}

.c11 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: 500;
  font-size: 0.7109375em;
  color: #fff;
  line-height: 1.5;
  text-transform: uppercase;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  min-width: 2.5em;
  height: 2.857142857142857em;
  padding: 0 1.5em;
  border: none;
  border-radius: 4px;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
  background-color: #00a8d8;
  --focus-color: 0,168,216;
  border-radius: 50%;
  min-width: auto;
  padding: 0;
  width: 2.857142857142857em;
}

.c11:hover {
  box-shadow: inset 10px 10px 999em rgba(0,0,0,0.1);
}

.c11:focus {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.1), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c11:active,
.c11.active {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.2), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c11:after {
  display: none;
  content: "";
  position: absolute;
  top: -1px;
  right: -1px;
  bottom: -1px;
  left: -1px;
  border-radius: inherit;
  background-color: rgba(255,255,255,0.5);
}

.c11[disabled] {
  pointer-events: none;
}

.c11[disabled]:after {
  display: block;
}

.c11 .c16 {
  font-size: 1.5em;
}

.c12 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: 500;
  font-size: 1.0390625em;
  color: #fff;
  line-height: 1.5;
  text-transform: uppercase;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  min-width: 2.5em;
  height: 2.857142857142857em;
  padding: 0 1.5em;
  border: none;
  border-radius: 4px;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
  background-color: #00a8d8;
  --focus-color: 0,168,216;
  border-radius: 50%;
  min-width: auto;
  padding: 0;
  width: 2.857142857142857em;
}

.c12:hover {
  box-shadow: inset 10px 10px 999em rgba(0,0,0,0.1);
}

.c12:focus {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.1), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c12:active,
.c12.active {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.2), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c12:after {
  display: none;
  content: "";
  position: absolute;
  top: -1px;
  right: -1px;
  bottom: -1px;
  left: -1px;
  border-radius: inherit;
  background-color: rgba(255,255,255,0.5);
}

.c12[disabled] {
  pointer-events: none;
}

.c12[disabled]:after {
  display: block;
}

.c12 .c16 {
  font-size: 1.5em;
}

.c13 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: 500;
  font-size: 0.6015625em;
  color: #fff;
  line-height: 1.5;
  text-transform: uppercase;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  min-width: 2.5em;
  height: 2.5em;
  padding: 0 1.5em;
  border: none;
  border-radius: 4px;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
  background-color: #00a8d8;
  --focus-color: 0,168,216;
  background-color: #fff;
  color: #00a8d8;
  box-shadow: 0 0 0 1px #00a8d8;
  border-radius: 50%;
  min-width: auto;
  padding: 0;
  width: 2.5em;
}

.c13:hover {
  box-shadow: inset 10px 10px 999em rgba(0,0,0,0.1);
}

.c13:focus {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.1), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c13:active,
.c13.active {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.2), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c13:after {
  display: none;
  content: "";
  position: absolute;
  top: -1px;
  right: -1px;
  bottom: -1px;
  left: -1px;
  border-radius: inherit;
  background-color: rgba(255,255,255,0.5);
}

.c13[disabled] {
  pointer-events: none;
}

.c13[disabled]:after {
  display: block;
}

.c13:hover {
  color: #222;
  box-shadow: 0 0 0 1px #222;
}

.c13:focus {
  box-shadow: 0 0 0 1px #00a8d8, 0 0 0 5px rgba(var(--focus-color),0.15);
}

.c13 .c16 {
  font-size: 1.5em;
}

.c14 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: 500;
  font-size: 0.7109375em;
  color: #fff;
  line-height: 1.5;
  text-transform: uppercase;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  min-width: 2.5em;
  height: 2.857142857142857em;
  padding: 0 1.5em;
  border: none;
  border-radius: 4px;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
  background-color: #00a8d8;
  --focus-color: 0,168,216;
  background-color: #fff;
  color: #00a8d8;
  box-shadow: 0 0 0 1px #00a8d8;
  border-radius: 50%;
  min-width: auto;
  padding: 0;
  width: 2.857142857142857em;
}

.c14:hover {
  box-shadow: inset 10px 10px 999em rgba(0,0,0,0.1);
}

.c14:focus {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.1), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c14:active,
.c14.active {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.2), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c14:after {
  display: none;
  content: "";
  position: absolute;
  top: -1px;
  right: -1px;
  bottom: -1px;
  left: -1px;
  border-radius: inherit;
  background-color: rgba(255,255,255,0.5);
}

.c14[disabled] {
  pointer-events: none;
}

.c14[disabled]:after {
  display: block;
}

.c14:hover {
  color: #222;
  box-shadow: 0 0 0 1px #222;
}

.c14:focus {
  box-shadow: 0 0 0 1px #00a8d8, 0 0 0 5px rgba(var(--focus-color),0.15);
}

.c14 .c16 {
  font-size: 1.5em;
}

.c15 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: 500;
  font-size: 1.0390625em;
  color: #fff;
  line-height: 1.5;
  text-transform: uppercase;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  min-width: 2.5em;
  height: 2.857142857142857em;
  padding: 0 1.5em;
  border: none;
  border-radius: 4px;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
  background-color: #00a8d8;
  --focus-color: 0,168,216;
  background-color: #fff;
  color: #00a8d8;
  box-shadow: 0 0 0 1px #00a8d8;
  border-radius: 50%;
  min-width: auto;
  padding: 0;
  width: 2.857142857142857em;
}

.c15:hover {
  box-shadow: inset 10px 10px 999em rgba(0,0,0,0.1);
}

.c15:focus {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.1), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c15:active,
.c15.active {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.2), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c15:after {
  display: none;
  content: "";
  position: absolute;
  top: -1px;
  right: -1px;
  bottom: -1px;
  left: -1px;
  border-radius: inherit;
  background-color: rgba(255,255,255,0.5);
}

.c15[disabled] {
  pointer-events: none;
}

.c15[disabled]:after {
  display: block;
}

.c15:hover {
  color: #222;
  box-shadow: 0 0 0 1px #222;
}

.c15:focus {
  box-shadow: 0 0 0 1px #00a8d8, 0 0 0 5px rgba(var(--focus-color),0.15);
}

.c15 .c16 {
  font-size: 1.5em;
}

.c1 {
  display: grid;
  grid-gap: 20px;
  grid-template-columns: repeat(4, fit-content(200px));
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <button
      className="c2"
    >
      ☁️
    </button>
    <button
      className="c3"
    >
      🔥
    </button>
    <button
      className="c4"
    >
      💾
    </button>
    <button
      className="c5"
    >
      ❌
    </button>
    <button
      className="c6"
    >
      ☁️
    </button>
    <button
      className="c7"
    >
      🔥
    </button>
    <button
      className="c8"
    >
      💾
    </button>
    <button
      className="c9"
    >
      ❌
    </button>
    <button
      className="c10"
    >
      ❤️️
    </button>
    <button
      className="c11"
    >
      ❤️️
    </button>
    <button
      className="c2"
    >
      ❤️️
    </button>
    <button
      className="c12"
    >
      ❤️️
    </button>
    <button
      className="c13"
    >
      ❤️️
    </button>
    <button
      className="c14"
    >
      ❤️️
    </button>
    <button
      className="c6"
    >
      ❤️️
    </button>
    <button
      className="c15"
    >
      ❤️️
    </button>
    <button
      className="c2"
    >
      <span
        className="c16 c17"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19.35 10.04C18.67 6.59 15.64 4 12 4 9.11 4 6.6 5.64 5.35 8.04 2.34 8.36 0 10.91 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96z"
          />
        </svg>
      </span>
      ️
    </button>
    <button
      className="c3"
    >
      <span
        className="c16 c17"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M13.5.67s.74 2.65.74 4.8c0 2.06-1.35 3.73-3.41 3.73-2.07 0-3.63-1.67-3.63-3.73l.03-.36C5.21 7.51 4 10.62 4 14c0 4.42 3.58 8 8 8s8-3.58 8-8C20 8.61 17.41 3.8 13.5.67zM11.71 19c-1.78 0-3.22-1.4-3.22-3.14 0-1.62 1.05-2.76 2.81-3.12 1.77-.36 3.6-1.21 4.62-2.58.39 1.29.59 2.65.59 4.04 0 2.65-2.15 4.8-4.8 4.8z"
          />
        </svg>
      </span>
    </button>
    <button
      className="c4"
    >
      <span
        className="c16 c17"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M17 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V7l-4-4zm-5 16c-1.66 0-3-1.34-3-3s1.34-3 3-3 3 1.34 3 3-1.34 3-3 3zm3-10H5V5h10v4z"
          />
        </svg>
      </span>
    </button>
    <button
      className="c5"
    >
      <span
        className="c16 c17"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
          />
        </svg>
      </span>
    </button>
    <button
      className="c6"
    >
      <span
        className="c16 c17"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19.35 10.04C18.67 6.59 15.64 4 12 4 9.11 4 6.6 5.64 5.35 8.04 2.34 8.36 0 10.91 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96z"
          />
        </svg>
      </span>
      ️
    </button>
    <button
      className="c7"
    >
      <span
        className="c16 c17"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M13.5.67s.74 2.65.74 4.8c0 2.06-1.35 3.73-3.41 3.73-2.07 0-3.63-1.67-3.63-3.73l.03-.36C5.21 7.51 4 10.62 4 14c0 4.42 3.58 8 8 8s8-3.58 8-8C20 8.61 17.41 3.8 13.5.67zM11.71 19c-1.78 0-3.22-1.4-3.22-3.14 0-1.62 1.05-2.76 2.81-3.12 1.77-.36 3.6-1.21 4.62-2.58.39 1.29.59 2.65.59 4.04 0 2.65-2.15 4.8-4.8 4.8z"
          />
        </svg>
      </span>
    </button>
    <button
      className="c8"
    >
      <span
        className="c16 c17"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M17 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V7l-4-4zm-5 16c-1.66 0-3-1.34-3-3s1.34-3 3-3 3 1.34 3 3-1.34 3-3 3zm3-10H5V5h10v4z"
          />
        </svg>
      </span>
    </button>
    <button
      className="c9"
    >
      <span
        className="c16 c17"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
          />
        </svg>
      </span>
    </button>
    <button
      className="c10"
    >
      <span
        className="c16 c17"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"
          />
        </svg>
      </span>
      ️
    </button>
    <button
      className="c11"
    >
      <span
        className="c16 c17"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"
          />
        </svg>
      </span>
      ️
    </button>
    <button
      className="c2"
    >
      <span
        className="c16 c17"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"
          />
        </svg>
      </span>
      ️
    </button>
    <button
      className="c12"
    >
      <span
        className="c16 c17"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"
          />
        </svg>
      </span>
      ️
    </button>
    <button
      className="c13"
    >
      <span
        className="c16 c17"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"
          />
        </svg>
      </span>
      ️
    </button>
    <button
      className="c14"
    >
      <span
        className="c16 c17"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"
          />
        </svg>
      </span>
      ️
    </button>
    <button
      className="c6"
    >
      <span
        className="c16 c17"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"
          />
        </svg>
      </span>
      ️
    </button>
    <button
      className="c15"
    >
      <span
        className="c16 c17"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"
          />
        </svg>
      </span>
      ️
    </button>
    <span />
  </div>
</div>
`;

exports[`Storyshots interact|Button sizes 1`] = `
.c0 {
  padding: 12px;
}

.c4 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: 500;
  font-size: 0.875em;
  color: #fff;
  line-height: 1.5;
  text-transform: uppercase;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  min-width: 2.5em;
  height: 2.857142857142857em;
  padding: 0 1.5em;
  border: none;
  border-radius: 4px;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
  background-color: #00a8d8;
  --focus-color: 0,168,216;
}

.c4:hover {
  box-shadow: inset 10px 10px 999em rgba(0,0,0,0.1);
}

.c4:focus {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.1), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c4:active,
.c4.active {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.2), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c4:after {
  display: none;
  content: "";
  position: absolute;
  top: -1px;
  right: -1px;
  bottom: -1px;
  left: -1px;
  border-radius: inherit;
  background-color: rgba(255,255,255,0.5);
}

.c4[disabled] {
  pointer-events: none;
}

.c4[disabled]:after {
  display: block;
}

.c4 .c6 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c2 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: 500;
  font-size: 0.6015625em;
  color: #fff;
  line-height: 1.5;
  text-transform: uppercase;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  min-width: 2.5em;
  height: 2.5em;
  padding: 0 1.5em;
  border: none;
  border-radius: 4px;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
  background-color: #00a8d8;
  --focus-color: 0,168,216;
}

.c2:hover {
  box-shadow: inset 10px 10px 999em rgba(0,0,0,0.1);
}

.c2:focus {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.1), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c2:active,
.c2.active {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.2), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c2:after {
  display: none;
  content: "";
  position: absolute;
  top: -1px;
  right: -1px;
  bottom: -1px;
  left: -1px;
  border-radius: inherit;
  background-color: rgba(255,255,255,0.5);
}

.c2[disabled] {
  pointer-events: none;
}

.c2[disabled]:after {
  display: block;
}

.c2 .c6 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c3 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: 500;
  font-size: 0.7109375em;
  color: #fff;
  line-height: 1.5;
  text-transform: uppercase;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  min-width: 2.5em;
  height: 2.857142857142857em;
  padding: 0 1.5em;
  border: none;
  border-radius: 4px;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
  background-color: #00a8d8;
  --focus-color: 0,168,216;
}

.c3:hover {
  box-shadow: inset 10px 10px 999em rgba(0,0,0,0.1);
}

.c3:focus {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.1), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c3:active,
.c3.active {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.2), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c3:after {
  display: none;
  content: "";
  position: absolute;
  top: -1px;
  right: -1px;
  bottom: -1px;
  left: -1px;
  border-radius: inherit;
  background-color: rgba(255,255,255,0.5);
}

.c3[disabled] {
  pointer-events: none;
}

.c3[disabled]:after {
  display: block;
}

.c3 .c6 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c5 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: 500;
  font-size: 1.0390625em;
  color: #fff;
  line-height: 1.5;
  text-transform: uppercase;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  min-width: 2.5em;
  height: 2.857142857142857em;
  padding: 0 1.5em;
  border: none;
  border-radius: 4px;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
  background-color: #00a8d8;
  --focus-color: 0,168,216;
}

.c5:hover {
  box-shadow: inset 10px 10px 999em rgba(0,0,0,0.1);
}

.c5:focus {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.1), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c5:active,
.c5.active {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.2), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c5:after {
  display: none;
  content: "";
  position: absolute;
  top: -1px;
  right: -1px;
  bottom: -1px;
  left: -1px;
  border-radius: inherit;
  background-color: rgba(255,255,255,0.5);
}

.c5[disabled] {
  pointer-events: none;
}

.c5[disabled]:after {
  display: block;
}

.c5 .c6 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c1 {
  display: grid;
  grid-gap: 20px;
  grid-template-columns: repeat(10, fit-content(200px));
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <button
      className="c2"
    >
      Tiny
    </button>
    <button
      className="c3"
    >
      Small
    </button>
    <button
      className="c4"
    >
      Default
    </button>
    <button
      className="c5"
    >
      Large
    </button>
  </div>
</div>
`;
